--- a/Website/Study.html
+++ b/Website/Study.html
@@ -9,7 +9,7 @@
 
     <body>
         <header>
-            <div class="container">
+            <div class="Headers">
                 <nav>
                     <div class="logo">
                         <a href="#"><span>Flynn</span> Fowler</a>
