--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="Viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="WebsiteV2.css">
+        <link rel="stylesheet" href="Website/WebsiteV2.css">
         <title>Personal Portfolio</title>
     </head>
     <div class="container">
@@ -26,10 +26,10 @@
                         </div>
                     </div>
                     <div class="card card-2">
-                        <img src="Images/Pfp.png" alt="Project Thumbnail">
+                        <img src="Website/Images/Pfp.png" alt="Project Thumbnail">
                     </div>
                     <div class="card card-3">
-                        <img src="Images/Japan-Image-1 (1).jpg" alt="Project Thumbnail">
+                        <img src="Website/Images/Japan-Image-1 (1).jpg" alt="Project Thumbnail">
                     </div>
                 </section>
                 <section class="Content-row content-row-2">
@@ -56,6 +56,6 @@
         </section>
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="JS Code/Main.js"></script>
+    <script src="Website/JS Code/Main.js"></script>
 </body>
 </html>
